Added Dockerfile and Jenkins support as well as refactoring for python3 and bes .practices

--- a/check_counters_db/tox.ini
+++ b/check_counters_db/tox.ini
@@ -4,6 +4,25 @@ envlist = py37
 [testenv]
 deps =
     pytest
-    mock
+    pytest-mock
 commands =
-    pytest test_main.py
+    pytest
+
+[testenv:coverage]
+deps =
+    pytest
+    pytest-cov
+    pytest-mock
+commands =
+    pytest --cov=mypackage --cov-report=xml
+
+[testenv:lint]
+deps =
+    flake8
+commands =
+    flake8 mypackage
+
+[flake8]
+max-line-length = 88
+exclude = .tox,.git,__pycache__,docs/source/conf.py,old,build,dist
+ignore = E203,W503
