--- a/advanced_website_status_check/Jenkinsfile
+++ b/advanced_website_status_check/Jenkinsfile
@@ -4,13 +4,13 @@ pipeline {
   stages {
     stage('Build') {
       steps {
-        sh 'docker build -t check_status .'
+        sh 'docker build --no-cache -t check_status .' // Added --no-cache for clean builds
       }
     }
 
     stage('Run') {
       steps {
-        sh 'docker run -it check_status https://www.google.com/'
+        sh 'docker run --rm -it check_status https://www.google.com/' // Added --rm to remove container after run
       }
     }
   }
