--- a/check_counters_db/Dockerfile
+++ b/check_counters_db/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.8-slim
+FROM python:3.12-slim
 
 WORKDIR /app
 
 COPY requirements.txt ./
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
