--- a/check_counters_db/tox.ini
+++ b/check_counters_db/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37
+envlist = py312, coverage, lint
 
 [testenv]
 deps =
@@ -19,8 +19,17 @@ commands =
 [testenv:lint]
 deps =
     flake8
+    flake8-docstrings
+    black
 commands =
     flake8 mypackage
+    black --check mypackage
+
+[testenv:format]
+deps =
+    black
+commands =
+    black mypackage
 
 [flake8]
 max-line-length = 88
