--- a/check_counters_db/requirements.txt
+++ b/check_counters_db/requirements.txt
@@ -1,1 +1,7 @@
-psycopg2
+psycopg2>=2.9.6
+pytest>=7.4.0
+pytest-mock>=3.11.1
+pytest-cov>=4.1.0
+flake8>=6.1.0
+flake8-docstrings>=1.7.0
+black>=23.9.1
