--- a/check_hadoop/tox.ini
+++ b/check_hadoop/tox.ini
@@ -1,12 +1,82 @@
 [tox]
-envlist = py38, py39, py310, py311
+envlist = 
+    py{37,38,39,310,311,312}-hadoop{2,3}-{nags004,nags010,nags020}
+    lint
+    type
+    docs
 isolated_build = True
+skip_missing_interpreters = True
 
 [testenv]
-deps = -rrequirements.txt
+deps =
+    -r{toxinidir}/requirements-dev.txt
+    -r{toxinidir}/requirements.txt
 commands =
-    python -m unittest discover -v
-    python -m unittest-xml-reporting discover -v  # Generate XML reports
+    # Run tests with pytest
+    hadoop2-nags004: pytest {posargs:tests} --hadoop-version=2.0 --nags-version=0.0.4 -v --junitxml=test-reports/junit-{envname}.xml
+    hadoop2-nags010: pytest {posargs:tests} --hadoop-version=2.0 --nags-version=0.1.0 -v --junitxml=test-reports/junit-{envname}.xml
+    hadoop2-nags020: pytest {posargs:tests} --hadoop-version=2.0 --nags-version=0.2.0 -v --junitxml=test-reports/junit-{envname}.xml
+    hadoop3-nags004: pytest {posargs:tests} --hadoop-version=3.0 --nags-version=0.0.4 -v --junitxml=test-reports/junit-{envname}.xml
+    hadoop3-nags010: pytest {posargs:tests} --hadoop-version=3.0 --nags-version=0.1.0 -v --junitxml=test-reports/junit-{envname}.xml
+    hadoop3-nags020: pytest {posargs:tests} --hadoop-version=3.0 --nags-version=0.2.0 -v --junitxml=test-reports/junit-{envname}.xml
+setenv =
+    PYTHONPATH = {toxinidir}
+    COVERAGE_FILE = .coverage.{envname}
 
-[unittest-xml-reporting]
-output_directory = test-reports  # Specify directory for XML reports
+[testenv:lint]
+deps =
+    black>=23.3.0
+    isort>=5.12.0
+    flake8>=6.0.0
+    pylint>=2.17.0
+    pydocstyle>=6.3.0
+commands =
+    black --check hadoop_health_monitor tests
+    isort --check-only --profile black hadoop_health_monitor tests
+    flake8 hadoop_health_monitor tests
+    pylint hadoop_health_monitor tests
+    pydocstyle hadoop_health_monitor
+
+[testenv:type]
+deps =
+    mypy>=1.3.0
+    types-mock>=5.0.0.1
+commands =
+    mypy hadoop_health_monitor tests
+
+[testenv:docs]
+deps =
+    sphinx>=7.0.0
+    sphinx-rtd-theme>=1.2.1
+    docstr-coverage>=2.2.0
+commands =
+    sphinx-build -b html docs/source docs/build/html
+    docstr-coverage hadoop_health_monitor --fail-under=95
+
+[testenv:coverage]
+deps =
+    pytest>=7.3.1
+    pytest-cov>=4.1.0
+commands =
+    pytest --cov=hadoop_health_monitor --cov-report=xml --cov-report=term {posargs:tests}
+
+[flake8]
+max-line-length = 100
+exclude = .tox,*.egg,build,data
+select = E,W,F
+
+[pytest]
+testpaths = tests
+python_files = test_*.py
+python_functions = test_*
+python_classes = Test*
+markers =
+    hadoop2: tests for Hadoop 2.x
+    hadoop3: tests for Hadoop 3.x
+    nags004: tests for NAGS 0.0.4
+    nags010: tests for NAGS 0.1.0
+    nags020: tests for NAGS 0.2.0
+    unit: unit tests
+    integration: integration tests
+    api: API tests
+    command: Command tests
