--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
 [tox]
 envlist = 
-    py{37,38,39,310,311,312}-nagios{446,447,448,449,4410}
+    py{38,39,310,311,312}-nagios{446,447,448,449,4410}
     lint
     type
     docs
     coverage
+    security
 isolated_build = True
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
@@ -19,11 +19,12 @@ python =
 
 [testenv]
 deps =
-    pytest>=7.3.1
+    pytest>=7.4.0
     pytest-cov>=4.1.0
-    pytest-mock>=3.10.0
-    httpx>=0.24.0
+    pytest-mock>=3.12.0
+    httpx>=0.26.0
     mock>=5.0.0
+    rich>=13.7.0
 commands =
     # Run tests with pytest
     nagios446: pytest {posargs:tests} --nagios-version=4.4.6 -v --junitxml=test-reports/junit-{envname}.xml
@@ -34,13 +35,14 @@ commands =
 setenv =
     PYTHONPATH = {toxinidir}
     COVERAGE_FILE = .coverage.{envname}
+    PYTHONWARNINGS = ignore::DeprecationWarning:distutils,ignore::DeprecationWarning:pkg_resources
 
 [testenv:lint]
 deps =
-    black>=23.3.0
+    black>=23.11.0
     isort>=5.12.0
-    flake8>=6.0.0
-    pylint>=2.17.0
+    flake8>=6.1.0
+    pylint>=3.0.0
     pydocstyle>=6.3.0
 commands =
     black --check src tests
@@ -51,31 +53,42 @@ commands =
 
 [testenv:type]
 deps =
-    mypy>=1.3.0
+    mypy>=1.7.0
     types-mock>=5.0.0.1
+    pydantic>=2.5.0
 commands =
     mypy src tests
 
 [testenv:docs]
 deps =
-    sphinx>=7.0.0
-    sphinx-rtd-theme>=1.2.1
+    sphinx>=7.2.0
+    sphinx-rtd-theme>=1.3.0
     docstr-coverage>=2.2.0
+    myst-parser>=2.0.0
 commands =
     sphinx-build -b html docs/source docs/build/html
     docstr-coverage src --fail-under=95
 
 [testenv:coverage]
 deps =
-    pytest>=7.3.1
+    pytest>=7.4.0
     pytest-cov>=4.1.0
 commands =
-    pytest --cov=src --cov-report=xml --cov-report=term {posargs:tests}
+    pytest --cov=src --cov-report=xml --cov-report=term --cov-report=html {posargs:tests}
+
+[testenv:security]
+deps =
+    bandit>=1.7.5
+    safety>=2.3.5
+commands =
+    bandit -r src/ -c pyproject.toml
+    safety check
 
 [flake8]
 max-line-length = 100
 exclude = .tox,*.egg,build,data
 select = E,W,F
+extend-ignore = E203
 
 [pytest]
 testpaths = tests
