--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,15 @@ name: Nagios Plugins Collection CI
 on:
   push:
     branches: [ main, develop ]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
   pull_request:
     branches: [ main, develop ]
   schedule:
     - cron: '0 0 * * 0'  # Weekly run on Sunday at midnight
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   test:
@@ -15,20 +20,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
         nagios-version: ['4.4.6', '4.4.7', '4.4.8', '4.4.9', '4.4.10']
-        exclude:
-          # Exclude any incompatible combinations if needed
-          - python-version: '3.7'
-            nagios-version: '4.4.10'
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
@@ -41,22 +43,24 @@ jobs:
       run: tox
     
     - name: Upload test results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: test-results-py${{ matrix.python-version }}-nagios${{ matrix.nagios-version }}
         path: test-reports/
+        retention-days: 7
 
   lint:
     name: Lint code
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
@@ -70,12 +74,13 @@ jobs:
     name: Type check
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
@@ -89,12 +94,13 @@ jobs:
     name: Build documentation
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
@@ -105,21 +111,23 @@ jobs:
       run: tox -e docs
     
     - name: Upload documentation
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: documentation
         path: docs/build/html/
+        retention-days: 7
 
   coverage:
     name: Test coverage
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
@@ -130,22 +138,48 @@ jobs:
       run: tox -e coverage
     
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
         fail_ci_if_error: true
 
+  security:
+    name: Security scan
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'pip'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install bandit safety
+    
+    - name: Run bandit
+      run: bandit -r src/ -c pyproject.toml
+    
+    - name: Run safety
+      run: safety check
+
   package:
     name: Build and verify package
     runs-on: ubuntu-latest
-    needs: [test, lint, type-check, docs, coverage]
+    needs: [test, lint, type-check, docs, coverage, security]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
@@ -159,7 +193,8 @@ jobs:
       run: twine check dist/*
     
     - name: Upload package
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: packages
         path: dist/
+        retention-days: 30
