--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nagios-plugins-collection"
-version = "1.1.0"
+version = "1.2.0"
 description = "A collection of enterprise-grade Nagios plugins for monitoring various systems"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -44,6 +44,7 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
+    "pytest-asyncio>=0.21.0",
     "tox>=4.11.0",
     "black>=23.11.0",
     "isort>=5.12.0",
@@ -63,6 +64,14 @@ security = [
 all = [
     "nagios-plugins-collection[dev,security]",
 ]
+
+[project.scripts]
+check_monghealth = "nagios_plugins.plugins.check_monghealth:main"
+check_hadoop = "nagios_plugins.plugins.check_hadoop:main"
+check_dig = "nagios_plugins.plugins.check_dig:main"
+check_jobs = "nagios_plugins.plugins.check_jobs:main"
+check_website_status = "nagios_plugins.plugins.check_website_status:main"
+check_ro_mounts = "nagios_plugins.plugins.check_ro_mounts:main"
 
 [project.urls]
 "Homepage" = "https://github.com/thomasvincent/nagios-plugins-collection"
